fix gap?

--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,7 @@ p {
   .active {
     background-color: #04AA6D;
   }
+
+  body {
+    margin: 0px;
+  }
